--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container-fluid">
     {{> myTemplate}}
   </div>
 </body>
 
 
 <template name="myTemplate">
-  <div class='row'>
+  <div class='row-fluid'>
     <article>
       <h3>Paginate Sample</h3>
 
@@ -41,7 +41,7 @@
     </article>
 
   </div>
-  <div class="row">
+  <div class="row-fluid">
   {{> paginate_pages}}
   </div>
 </template>
