--- a/index.html
+++ b/index.html
@@ -8,17 +8,33 @@
   </div>
 </body>
 
+<template name="home">
+  <div class='row-fluid'>
+    <div>
+      <h3>Paginate Sample Homepage</h3>
+    </div>
+    <div>
+      <h4>Single paginate (Animals Collection):</h4>
+      <button id="animalBtn" class="btn btn-large btn-primary" type="button">View</button>
+    </div>
+    <div>
+      <h4>Multiple paginate with the same Template (People Collection):</h4>
+      <button id="adultBtn" class="btn btn-large btn-info" type="button">Adults View</button>
+      <button id="childrenBtn" class="btn btn-large btn-info" type="button">Childrens View</button>
+    </div>
+  </div>
+</template>
 
 <template name="peopleTemplate">
   <div class='row-fluid'>
     <article>
+      <a class="btn" href="/" style="margin-top:10px"><i class="icon-home"></i>Home</a> 
       <h3>Paginate Sample People</h3>
-
       <table class='table table-bordered table-striped'>
         <thead>
         <tr>
           <th>Name</th>
-          <th>Location</th>
+          <th>Age</th>
           <th></th>
         </tr>
         </thead>
@@ -29,7 +45,7 @@
               {{name}}
             </td>
             <td class="span5">
-              {{location}}
+              {{age}}
             </td>
             <td class="span1">
             <center><a class='btn btn-primary btn-small' href="">View</a></center>
@@ -49,6 +65,7 @@
 <template name="animalTemplate">
   <div class='row-fluid'>
     <article>
+      <a class="btn" href="/" style="margin-top:10px"><i class="icon-home"></i>Home</a> 
       <h3>Paginate Sample Animal</h3>
 
       <table class='table table-bordered table-striped'>
@@ -56,7 +73,6 @@
         <tr>
           <th>Animal Name</th>
           <th>Size</th>
-          <th></th>
         </tr>
         </thead>
         {{#if animals}}
@@ -67,9 +83,6 @@
             </td>
             <td class="span5">
               {{size}}
-            </td>
-            <td class="span1">
-            <center><a class='btn btn-primary btn-small' href="">View</a></center>
             </td>
           </tr>
           {{/each}}
